--- a/index.html
+++ b/index.html
@@ -11,9 +11,30 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/jsx">
+
         const app = document.getElementById('app');
+
+        function Header() {
+            return <h1>Develop, preview, ship!</h1>;
+        }
+
+        function HomePage() {
+            return (
+                <div>
+                    <Header/>
+                </div>
+                );
+        }
+
         const root = ReactDOM.createRoot(app);
-        root.render(<h1>Develop, preview, ship!</h1>);
+        root.render(<HomePage />);
+
+
+
+
+
+        //root.render(<h1>Develop, preview, ship!</h1>);
+
         // const app = document.getElementById('app');
         // const header = document.createElement("h1");
         // const text = "Develop, preview, ship!";
